@@ -5,29 +5,24 @@
  * For commercial licenses see https://www.tiny.cloud/
  */
 
+import { Range } from '@ephox/dom-globals';
 import { Arr } from '@ephox/katamari';
 import { Element, SelectorFilter } from '@ephox/sugar';
+import Editor from '../api/Editor';
 import * as ElementType from '../dom/ElementType';
 import * as MultiRange from './MultiRange';
-import Editor from '../api/Editor';
 
-const getCellsFromRanges = function (ranges) {
-  return Arr.filter(MultiRange.getSelectedNodes(ranges), ElementType.isTableCell);
-};
+const getCellsFromRanges = (ranges: Range[]) => Arr.filter(MultiRange.getSelectedNodes(ranges), ElementType.isTableCell);
 
-const getCellsFromElement = function (elm) {
-  return SelectorFilter.descendants(elm, 'td[data-mce-selected],th[data-mce-selected]');
-};
+const getCellsFromElement = (elm: Element) => SelectorFilter.descendants(elm, 'td[data-mce-selected],th[data-mce-selected]');
 
-const getCellsFromElementOrRanges = function (ranges, element) {
+const getCellsFromElementOrRanges = (ranges: Range[], element: Element) => {
   const selectedCells = getCellsFromElement(element);
-  const rangeCells = getCellsFromRanges(ranges);
-  return selectedCells.length > 0 ? selectedCells : rangeCells;
+  return selectedCells.length > 0 ? selectedCells : getCellsFromRanges(ranges);
 };
 
-const getCellsFromEditor = function (editor: Editor) {
-  return getCellsFromElementOrRanges(MultiRange.getRanges(editor.selection.getSel()), Element.fromDom(editor.getBody()));
-};
+const getCellsFromEditor = (editor: Editor) =>
+  getCellsFromElementOrRanges(MultiRange.getRanges(editor.selection.getSel()), Element.fromDom(editor.getBody()));
 
 export {
   getCellsFromRanges,
